After hiding the title , solve the issue of the navigation top not being aligned has been resolved.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -44,3 +44,8 @@
     display: none;
 }
 
+.md-sidebar {
+    padding-top: 0; /* Remove top padding */
+    margin-top: 0;  /* Remove top margin */
+}
+
